<resources>
    <string name="app_name">EVE</string>
    <string name="str_minimum_password">enter minimum 8 characters!</string>
    <string name="str_auth_failed">Authentication failed, check your email and password or sign up!</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="str_remove_user">Remove user</string>
    <string name="title_activity_login">Sign in</string>
    <string name="str_change_email">Change Email</string>
    <string name="str_change_password">Change Password</string>
    <string name="str_new_password">New password</string>
    <string name="str_old_password">Old password</string>

    //Invalid values
    <string name="str_inval_password"> Use 8 or more characters with a mix of letters, numbers &amp; symbols</string>
    <string name="str_inval_email">This email is not valid.</string>
    <string name="str_no">No</string>
    <string name="str_delete">Delete</string>
    <string name="str_yes">Yes</string>
    //null errors
    <string name="str_null_name">Enter name!</string>
    <string name="str_null_password">Enter password!</string>
    <string name="str_minor_dob">Wrong date of birth!</string>
    <string name="str_null_phone">Enter a valid phone number!</string>
    //hints
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_new_pass">New Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">0171234567</string>
    //buttons
    <string name="str_signUp">No account yet? SignUp here.</string>
    <string name="btn_signUp">SignUp</string>
    <string name="btn_login">Login</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>

    <string name="str_female">Female</string>
    <string name="str_male">Male</string>
    <string name="str_dob">DD/MM/YY</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="str_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_action_search">Search</string>
    <string name="str_action_settings">Account Settings</string>
    <string name="action_logout">Logout</string>
    <string name="str_change_photo">Change Photo</string>
    <string name="hint_confirmPassword">Confirm password</string>
    <string name="str_password_notMatching">Passwords do not match!</string>
    <string name="str_post_description">Add Description</string>
    <string name="btn_post">Post Event</string>
    <string name="str_upload_image">Upload Image</string>
    <string name="str_bottom_home">Home</string>
    <string name="str_bottom_notification">Notification</string>
    <string name="str_bottom_profile">Profile</string>
    <string name="str_bottom_new_post">New Post</string>
    <string name="str_event_title">Event Title</string>
    <string name="str_event_start_date">Event Start Date</string>
    <string name="event_end_date">Event End Date</string>
    <string name="str_event_venue">Event Venue</string>
    <string name="str_null_title">Enter event title!</string>
    <string name="str_null_start_date">Enter event start date</string>
    <string name="str_null_end_date">Enter event end date</string>
    <string name="str_null_venue">Select event venue</string>
    <string name="str_null_event_image">Select an Image</string>
    <string name="str_date_invalid">Invalid Date</string>
    <string name="btn_save">Save</string>
    <string name="hint_send_message">Type message</string>

    //venu drop down
    <string-array name="brew_array">
        <item>Auditorium 1</item>
        <item>Auditorium 2</item>
        <item>Auditorium 3</item>
        <item>Auditorium 4</item>
        <item>Auditorium 5</item>
        <item>Auditorium 6</item>
        <item>Auditorium 7</item>
        <item>Auditorium 8</item>
        <item>Main Foyer</item>


    </string-array>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="str_addManager">Add Manager</string>


</resources>
