<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".LoginActivity">
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <ImageView
               android:id="@+id/ic_eve_logo"
               android:layout_width="160dp"
               android:layout_height="128dp"
               android:layout_alignParentTop="true"
               android:layout_centerHorizontal="true"
               android:layout_marginTop="140dp"
               android:adjustViewBounds="false"
               android:cropToPadding="false"
               app:srcCompat="@mipmap/ic_eve_logo_round" />

           <EditText
               android:id="@+id/input_username"
               android:layout_width="280dp"
               android:layout_height="wrap_content"
               android:layout_below="@id/ic_eve_logo"
               android:layout_centerHorizontal="true"
               android:layout_marginTop="24dp"
               android:backgroundTint="@color/eve_green_lite"
               android:drawableLeft="@drawable/ic_action_user"
               android:ems="10"
               android:hint="@string/hint_email"
               android:inputType="textEmailAddress"
               android:textSize="16dp" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="280dp"
            android:layout_height="56dp"
            android:layout_below="@id/input_username"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:drawableLeft="@drawable/ic_action_pass"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:backgroundTint="@color/eve_green_lite"
            android:textSize="16dp" />

           <Button
               android:id="@+id/btn_login"
               android:layout_width="256dp"
               android:layout_height="54dp"
               android:layout_below="@id/input_password"
               android:layout_centerHorizontal="true"
               android:layout_marginTop="80dp"
               android:background="@color/eve_green"
               android:text="@string/btn_login"
               android:textColor="@color/common_google_signin_btn_text_dark_default" />

        <TextView
            android:id="@+id/txt_btn_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_marginTop="12dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:text="@string/str_signUp" />

       </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:theme="@android:style/Widget.DeviceDefault.Light.ProgressBar"
        android:visibility="gone" />
</RelativeLayout>