<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".PostActivity">

    <include
        android:id="@+id/mCustomToolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/mCustomToolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/new_post_Image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:background="@android:color/darker_gray"
                android:cropToPadding="true"
                android:maxWidth="220dp"
                android:minHeight="220dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.56"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/new_post_event_title"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:layout_below="@id/input_name"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/eve_green_lite"
                android:ems="10"
                android:hint="@string/str_event_title"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_post_Image"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/new_post_event_start_date"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/eve_green_lite"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/str_event_start_date"
                android:inputType="text|date"
                android:longClickable="false"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_post_event_title"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/new_post_event_end_date"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/eve_green_lite"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/event_end_date"
                android:inputType="text|date"
                android:longClickable="false"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/new_post_event_start_date"
                app:layout_constraintTop_toBottomOf="@+id/new_post_event_title"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/new_post_description"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/str_post_description"
                android:inputType="textMultiLine"
                android:maxLength="125"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_post_venue_spinner" />

            <TextView
                android:id="@+id/venue"
                android:layout_width="67dp"
                android:layout_height="23dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:maxLength="125"
                android:text="Venue :"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_post_event_start_date" />

            <Spinner
                android:id="@+id/new_post_venue_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_name"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:inputType="text"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/venue"
                app:layout_constraintTop_toBottomOf="@+id/new_post_event_start_date" />

            <Button
                android:id="@+id/postEvent"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_below="@id/input_password"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:background="@color/eve_green"
                android:padding="16dp"
                android:text="@string/btn_post"
                android:textAllCaps="false"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_post_description" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:theme="@style/AlertDialog.AppCompat.Light"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:visibility="invisible" />


</RelativeLayout>