<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragments.ProfileFragment">
    <!--<View-->
    <!--android:id="@+id/view"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="200dp"-->
    <!--android:layout_alignParentStart="true"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_marginBottom="50dp"-->
    <!--android:background="@color/eve_green_lite"-->
    <!--android:layout_alignParentLeft="true" />-->

    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="match_parent"
        android:layout_height="169dp"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@android:color/darker_gray" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/txt_btn_change_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="129dp"
        android:text="@string/str_change_photo"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/imgProfile"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@color/colorPrimary"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/tab_messages"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/notification_recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </android.support.v7.widget.RecyclerView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab_likes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="24dp"
                        android:backgroundTint="@color/eve_green_lite"
                        android:ems="10"
                        android:enabled="false"
                        android:hint="@string/hint_name"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/user_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/user_name"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="24dp"
                        android:backgroundTint="@color/eve_green_lite"
                        android:ems="10"
                        android:enabled="false"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>